[gd_scene load_steps=18 format=2]

[ext_resource path="res://Assets/front_catapult.png" type="Texture" id=1]
[ext_resource path="res://Objects/Crosshair.tscn" type="PackedScene" id=2]
[ext_resource path="res://Objects/TargetCrosshair.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scripts/Catapult.gd" type="Script" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 35, 36 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 128, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 256, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 512, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 640, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 768, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 896, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1024, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1152, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1280, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1408, 0, 128, 128 )

[sub_resource type="SpriteFrames" id=14]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ) ],
"loop": false,
"name": "throw",
"speed": 12.0
} ]

[node name="Catapult" type="Area2D" groups=[
"actors",
]]
collision_layer = 8
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Crosshair" parent="." instance=ExtResource( 2 )]
tension_limit = 100

[node name="TargetCrosshair" parent="." instance=ExtResource( 3 )]
tension_limit = 100
multiplier = 5

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 14 )
animation = "throw"

[node name="RockStart" type="Position2D" parent="."]
position = Vector2( 0, -47.1434 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.4
one_shot = true
[connection signal="input_event" from="." to="." method="_on_Catapult_input_event"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
